--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -1,5 +1,16 @@
 .card {
-    width: 200px;
-    height: 200px;
     border: 2px solid black;
+    background-color: papayawhip;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    display: inline-block;
+}
+
+header, 
+ul, 
+footer {
+    justify-content: space-between;
 }
