--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 main {
-  background-color: grey;
+  background-image: url("../../images/galaxy.jpg");
   display: flex;
   height: 100vh;
   width: 100%;
