--- a/src/components/Fetch/Fetch.css
+++ b/src/components/Fetch/Fetch.css
@@ -1,12 +1,25 @@
 .navContainer {
-  background-color: red;
-  width: 30%;
+  width: 28%;
   justify-content: flex-start;
 }
 
+.buttonImages {
+  height: 130px;
+  width: 130px;
+  margin: 1px 100px;
+}
+
 button {
+  border-radius: 8px;
   display: block;
+  font-family: 'Dunkin';
+  color: #FF0075;
+  font-size: 18px;
   height: 30px;
-  margin: 20px auto;
-  width: 80%;
+  margin: 5px auto;
+  width: 60%;
+}
+
+button:hover {
+  color: #72C676;
 }
