--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+@font-face {
+  font-family: 'Japan';
+  src: local('Japan'), url(./fonts/Japan.ttf) format('ttf');
+  font-family: 'Dunkin';
+  src: local('Dunkin'), url(./fonts/Dunkin.ttf) format('ttf');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Japan'
 }
 
 code {
