--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -7,12 +7,13 @@
     font-family: 'Dunkin';
 }
 
-.star {
-
-}
-
 .cardTitle {
     font-size: 21px;
+    margin-left: 10px;
+}
+
+img {
+    margin-right: 10px;
 }
 
 .cardList {
